--- a/app/src/main/res/drawable/bg_speedometer_circle.xml
+++ b/app/src/main/res/drawable/bg_speedometer_circle.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval"
-    android:useLevel="true"
-    android:innerRadius="@dimen/activity_vertical_margin">
-    <solid android:color="#ffffff"/> <!--199fff-->
+    android:shape="oval">
+    <solid android:color="#aaaaaa"/> <!--199fff-->
     <stroke
         android:width="2dp"
         android:color="#444444"/>
