--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,49 +9,49 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.15"/>
+        app:layout_constraintGuide_percent="0.175" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineV2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.30"/>
+        app:layout_constraintGuide_percent="0.325" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineV3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.45"/>
+        app:layout_constraintGuide_percent="0.425" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineV4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.60"/>
+        app:layout_constraintGuide_percent="0.575" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineV5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75"/>
+        app:layout_constraintGuide_percent="0.675" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineV6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.90"/>
+        app:layout_constraintGuide_percent="0.825" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineH1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"/>
+        app:layout_constraintGuide_percent="0.1" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineH2"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6"/>
+        app:layout_constraintGuide_percent="0.6" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineH4"
@@ -74,62 +74,62 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.8"/>
 
-    <Button
+    <com.example.lk.benoreno.ControlView.SettingsButtonView
         android:id="@+id/btSettingsBikeInfo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Bike Information"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH2"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guidelineV2"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1"
         app:layout_constraintTop_toTopOf="@+id/guidelineH1" />
 
-    <Button
+    <com.example.lk.benoreno.ControlView.SettingsButtonView
         android:id="@+id/btSettingsUserAcc"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="User Accounts"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH2"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guidelineV4"
         app:layout_constraintStart_toStartOf="@+id/guidelineV3"
         app:layout_constraintTop_toTopOf="@+id/guidelineH1" />
 
-    <Button
+    <com.example.lk.benoreno.ControlView.SettingsButtonView
         android:id="@+id/btSettingsAntiTheft"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Anti Theft"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH2"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guidelineV6"
         app:layout_constraintStart_toStartOf="@+id/guidelineV5"
         app:layout_constraintTop_toTopOf="@+id/guidelineH1" />
 
-    <Button
+    <com.example.lk.benoreno.ControlView.SettingsButtonView
         android:id="@+id/btSettingsAutomation"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Automation"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guidelineV2"
         app:layout_constraintStart_toStartOf="@+id/guidelineV1"
         app:layout_constraintTop_toTopOf="@+id/guidelineH3"/>
 
-    <Button
+    <com.example.lk.benoreno.ControlView.SettingsButtonView
         android:id="@+id/btSettingsRegional"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Regional"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guidelineV4"
         app:layout_constraintStart_toStartOf="@+id/guidelineV3"
         app:layout_constraintTop_toTopOf="@+id/guidelineH3" />
 
-    <Button
+    <com.example.lk.benoreno.ControlView.SettingsButtonView
         android:id="@+id/btSettingsLights"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Lights"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH4"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/guidelineV6"
         app:layout_constraintStart_toStartOf="@+id/guidelineV5"
         app:layout_constraintTop_toTopOf="@+id/guidelineH3"/>
